# cmake-imgui-example

./: .gitignore  CMakeLists.txt  README.md
imgui-cmake/libs/SDL/: CMakeLists.txt
imgui-cmake/libs/SDL/include/SDL3/: SDL_gamecontroller.h  SDL_guid.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_sensor.h
imgui-cmake/libs/SDL/src/haptic/windows/: SDL_dinputhaptic.c
imgui-cmake/libs/SDL/src/hidapi/libusb/: hid.c
imgui-cmake/libs/SDL/src/hidapi/linux/: hid.c
imgui-cmake/libs/SDL/src/joystick/: SDL_gamecontroller.c  SDL_joystick.c  controller_type.c  controller_type.h
imgui-cmake/libs/SDL/src/joystick/android/: SDL_sysjoystick.c
imgui-cmake/libs/SDL/src/joystick/apple/: SDL_mfijoystick.m
imgui-cmake/libs/SDL/src/joystick/hidapi/: SDL_hidapi_combined.c  SDL_hidapi_gamecube.c  SDL_hidapi_luna.c  SDL_hidapi_ps3.c  SDL_hidapi_ps4.c  SDL_hidapi_ps5.c  SDL_hidapi_steam.c  SDL_hidapi_switch.c  SDL_hidapi_wii.c  SDL_hidapi_xbox360.c  SDL_hidapi_xboxone.c  SDL_hidapijoystick.c
imgui-cmake/libs/SDL/src/joystick/linux/: SDL_sysjoystick.c
imgui-cmake/libs/SDL/src/joystick/vita/: SDL_sysjoystick.c
imgui-cmake/libs/SDL/test/: controllermap.c
imgui-cmake/libs/imgui/: imgui.cpp
imgui-cmake/libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_sdl.cpp  imgui_impl_win32.cpp
inc/app/: app.h  config.h  ui.h
inc/services/: ApiService.h  RandomService.h
inc/utils/: utils.h
server/: index.js
src/: main.cpp
src/app/: config.h  main.cpp  ui.cpp
src/services/: ApiService.cpp  RandomService.cpp
src/utils/: randint.cpp
(+7 files in other folders)
